# lucia

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  MANIFEST.in  Pipfile  README.md  conf.py  contributing.md  index.html  index.rst  main.py  output.txt  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  spec_draft.md  stats.py  test.py  todo.txt
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: testing.yaml
accessible_output2/: __init__.py
accessible_output2/outputs/: __init__.py  auto.py  base.py  dolphin.py  e_speak.py  jaws.py  nvda.py  pc_talker.py  sapi4.py  sapi5.py  system_access.py  voiceover.py  window_eyes.py
api/lucia/: index.html
api/lucia.ui/: index.html
api/lucia.utils/: index.html
cli/: index.html
doc/: lucia.audio.openal.rst
docs/: Makefile  api.rst  conf.py  index.rst  license.rst  logging.rst  lucia.audio.bass.rst  lucia.audio.fmod.rst  lucia.audio.rst  lucia.ui.rst  make.bat  modules.rst  pydocmd.yml
docs/source/: conf.py  index.rst  lucia.audio.rst  lucia.rst  lucia.utils.rst
examples/3d/: PositionableObjectExample.py  bass_example.py  jbl_begin.caf
examples/3dpackfile/: bass_example.py
examples/demo-game.old/: main.py
examples/demo1/: info.txt  input_demo.py  main.py  main2.py
examples/demo2/: info.txt  main.py
libloader/: __init__.py  com.py  libloader.py
lucia/: __init__.py  _version.py  data.py  exceptions.py  game.py  globals.py  logger.py  output.py  packfile.py  resourcemanager.py  security.py  speechcontroller.py  taskmanager.py
lucia-cli/: __init__.py  packer.py
lucia.old/: speechcontroller.py
lucia.old/interface/: input.py  menu.py  speechsystem.py
lucia.old/utils/: __init__.py  configurations.py  instance_checker.py  timer.py
lucia/audio/: __init__.py  backend.py  loaders.py  sound.py  soundpool.py
lucia/cli/: __init__.py  packer.py
new packer/: hello.txt  pack.py  test.py
old.lucia/: __init__.py  globals.py  resourcemanager.py  security.py  taskmanager.py
platform_utils/: blackhole.py  clipboard.py  idle.py  paths.py  process.py  web_browser.py
search/: search_index.json
sounds/: resourcemanager.py  security.py
tests/: test_audiobackends.py  test_data.py  test_initialization.py  test_lucia_output.py  test_packfile.py  util.py
web/: mkdocs.yml
wheels/: pygame-1.9.3-cp36-cp36m-win32.whl  pygame-1.9.3-cp37-cp37m-win32.whl
(+83 files in other folders)
