[tool.poetry]
name = "lucia"
version = "2.0.0"
description = "An audio game engine written in python"
authors = ["NicklasTegner <NicklasMCHD@live.dk>"]
readme = "README.md"
repository = "https://github.com/LuciaSoftware/lucia"
keywords = ["audiogame", "blind", "lucia", "python3", "bgt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Boost Software License 1.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "<3.10,>=3.6.1"
pygame = "^2.0"
cytolk = {version = "*", platform = "win32"}
pyobjc = {version = "^6.2.2", platform = "darwin"}
espeakng = {version = "^1.0.2", platform = "linux"}
Sphinx = {version = ">3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = { version = "^2.6", python = "^3.6.1" }

[tool.poetry.extras]
docs = ["sphinx"]

[tool.poetry.scripts]
lucia = 'lucia.cli:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LuciaSoftware/lucia/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
