[metadata]
name = lucia
description = A cross platform, feature rich audio game engine written in Python.
description-file = README.md
description-content-type = text/markdown
home-page = http://github.com/LuciaSoftware/lucia
author = Lucia Software
author-email = NicklasMCHD@live.dk
license = LGPL

[tool:pytest]
testpaths = "tests"
addopts = "-q"

[flake8]
exclude = env, .eggs, build

[build_sphinx]
builders = html
source-dir = docs
build-dir = docs
all-files = 1

[entry_points]
console_scripts =
    lucia.packer = lucia.cli.packer:main
    lucia=lucia.cli:main

[options]
install_requires =
    appscript;platform_system=='Darwin'
    pywin32;platform_system=='Windows'
    pypiwin32;platform_system=='Windows'
